--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,5 +11,6 @@ mime = "0.3.17"
 reqwest = { version = "0.11.16", features = ["serde_json", "blocking", "json"] }
 serde = { version = "1.0.160", features = ["derive"] }
 serde_json = { version = "1.0.95" }
+easydev = { git = "https://github.com/dyanechi/easydev-rs" }
 # ureq = { version = "2.6.2", features = ["serde", "serde_json", "json"] }
 
